--- a/package.json
+++ b/package.json
@@ -9,13 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.18",
+    "@nextui-org/code": "^2.0.16",
+    "@nextui-org/input": "^2.1.6",
+    "@nextui-org/kbd": "^2.0.17",
+    "@nextui-org/link": "^2.0.19",
+    "@nextui-org/navbar": "^2.0.19",
+    "@nextui-org/react": "^2.1.10",
+    "@nextui-org/snippet": "^2.0.22",
+    "@nextui-org/switch": "^2.0.18",
+    "@nextui-org/system": "^2.0.7",
+    "@nextui-org/theme": "^2.1.6",
+    "@react-aria/ssr": "^3.7.1",
+    "@react-aria/visually-hidden": "^3.8.3",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3"
   }
 }
